<resources>
    <string name="app_name">FamilyApp</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="in_case_of_emergency_keep_telling_family_members_to_contact_me">In case of emergency , keep telling family members to contact me</string>
    <string name="guard">GUARD</string>
    <string name="guard_text">Open when you are on a potentially dangerous journey.</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="shield">Guard</string>
    <string name="profile">Profile</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="default_web_client_id">636623090710-iqv80dhjehlh979556rb5df7pekgmdmm.apps.googleusercontent.com</string>
</resources>