<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e7e9">

    <TextView
        android:id="@+id/txt_secr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="18dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="24sp"/>

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="16dp"
        android:id="@+id/pinkCard"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#f0737b"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_secr" />


    <TextView
        android:id="@+id/textSOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/sos"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pinkCard"
        app:layout_constraintTop_toTopOf="@id/pinkCard" />

    <TextView
        app:layout_constraintStart_toStartOf="@id/pinkCard"
        app:layout_constraintEnd_toStartOf="@id/sosImg"
        android:id="@+id/sos_msg"
        android:layout_width="0dp"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:text="@string/in_case_of_emergency_keep_telling_family_members_to_contact_me"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@id/textSOS" />

    <ImageView
        android:id="@+id/sosImg"
        android:layout_margin="16dp"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:elevation="16dp"
        android:src="@drawable/sos"
        app:layout_constraintBottom_toBottomOf="@id/pinkCard"
        app:layout_constraintEnd_toEndOf="@id/pinkCard"
        app:layout_constraintTop_toTopOf="@id/pinkCard"
        />

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="16dp"
        android:id="@+id/greenCard"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#63d2c8"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/pinkCard" />

    <TextView
        android:id="@+id/textGuard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/guard"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/greenCard"
        app:layout_constraintTop_toTopOf="@id/greenCard" />


    <TextView
        app:layout_constraintStart_toStartOf="@id/greenCard"
        app:layout_constraintEnd_toStartOf="@id/guardImg"
        android:id="@+id/guard_msg"
        android:layout_width="0dp"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:text="@string/guard_text"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@id/textGuard" />

    <ImageView
        android:id="@+id/guardImg"
        android:layout_margin="16dp"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:elevation="16dp"
        android:src="@drawable/guard"
        app:layout_constraintBottom_toBottomOf="@id/greenCard"
        app:layout_constraintEnd_toEndOf="@id/greenCard"
        app:layout_constraintTop_toTopOf="@id/greenCard"/>



</androidx.constraintlayout.widget.ConstraintLayout>